added conftest.py and system tests

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 markers =
     long_method: Tests for detecting long methods
     long_param: Tests for detecting long parameter lists
