--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,74 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiohttp-jinja2==1.6
+aiosignal==1.3.2
+appdirs==1.4.4
+asgiref @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/asgiref_1699251384459/work
+astroid==3.3.10
+attrs==25.3.0
+baron==0.10.1
+click==8.1.8
+colorama==0.4.6
 colorlog==6.9.0
+contourpy==1.3.2
+coverage==7.8.2
+customtkinter==5.2.2
+cycler==0.12.1
+darkdetect==0.8.0
+dill==0.4.0
+Django @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/django_1699268069337/work
+fonttools==4.58.0
+frozenlist==1.6.0
+idna==3.10
+importlib_metadata==8.7.0
+iniconfig==2.1.0
+isort==6.0.1
+Jinja2==3.1.6
+kiwisolver==1.4.8
+Levenshtein==0.27.1
+linkify-it-py==2.0.3
+mando==0.7.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mccabe==0.7.0
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+msgpack==1.1.0
+multidict==6.4.3
+numpy==2.2.6
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
+platformdirs==4.3.8
+pluggy==1.5.0
+propcache==0.3.1
+Pygments==2.19.1
+pylint==3.3.7
+pyparsing==3.2.3
 pytest==8.3.5
 pytest-asyncio==0.26.0
 pytest-mock==3.14.0
 pytest-reportlog==0.4.0
 pytest-textual-snapshot==1.1.0
+python-dateutil==2.9.0.post0
+python-Levenshtein==0.27.1
+pytz==2025.2
+radon==6.0.1
+RapidFuzz==3.13.0
+redbaron==0.9.2
 rich==14.0.0
+rply==0.7.8
+seaborn==0.13.2
+setuptools==68.2.2
+six==1.17.0
+sqlparse @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/sqlparse_1699261944171/work
+syrupy==4.8.0
 textual==3.2.0
 textual-dev==1.7.0
 textual-serve==1.1.2
+tkcode==0.1.6
+tomlkit==0.13.2
 tree-sitter==0.24.0
 tree-sitter-bash==0.23.3
 tree-sitter-css==0.23.2
@@ -25,4 +86,8 @@ tree-sitter-toml==0.7.0
 tree-sitter-xml==0.7.0
 tree-sitter-yaml==0.7.0
 typing_extensions==4.13.2
-customtkinter==5.2.2
+tzdata==2025.2
+uc-micro-py==1.0.3
+wheel==0.41.2
+yarl==1.20.0
+zipp==3.21.0
